--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <title>Iron Lions</title>
+        <link href="/css/style.css" rel="stylesheet" type="text/css" media="all">
     </head>
     <body>
         <p>hello this is a website</p>
