--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <title>Iron Lions</title>
         <link href="/css/style.css" rel="stylesheet" type="text/css" media="all">
+        <link rel="icon" type="image/x-icon" href="/img/favicon/programming.jpg">
     </head>
     <body>
         <p>hello this is a website</p>
