--- a/index.html
+++ b/index.html
@@ -6,8 +6,21 @@
         <title>Iron Lions</title>
         <link href="/css/style.css" rel="stylesheet" type="text/css" media="all">
         <link rel="icon" type="image/x-icon" href="/img/favicon/programming.jpg">
+        <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
+        <script> 
+            $(function(){
+                $("#header").load("header.html"); 
+                $("#footer").load("footer.html");
+            });
+        </script> 
     </head>
     <body>
-        <p>hello this is a website</p>
+        <div id="header"></div>
+
+        <main>
+            <p>hello this is a website</p>
+        </main>
+        
+        <div id="footer"></div>
     </body>
 </html>
