--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <title>Iron Lions</title>
         <link href="/css/style.css" rel="stylesheet" type="text/css" media="all">
-        <link rel="icon" type="image/x-icon" href="/img/favicon/programming.jpg">
+        <link rel="icon" type="image/x-icon" href="/img/favicon/programming.png">
         <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
         <script> 
             $(function(){
