--- a/index.html
+++ b/index.html
@@ -19,6 +19,7 @@
 
         <main>
             <p>hello this is a website</p>
+            <p>This is a LHS website</p>
         </main>
         
         <div id="footer"></div>
