--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
 
         <main>
             <p>hello this is a website</p>
-            <p>This is a LHS website</p>
+            <head>This is a LHS website</head>
         </main>
         
         <div id="footer"></div>
