--- a/index.html
+++ b/index.html
@@ -21,8 +21,7 @@
         <div id="header"></div>
 
         <main>
-            <h1>This is a LHS website</h1> 
-            <p>hello this is a website</p>
+            <h1 class="teamHeader">Iron Lions</h1> 
         </main>
         
         <div id="footer"></div>
