--- a/index.html
+++ b/index.html
@@ -21,7 +21,11 @@
         <div id="header"></div>
 
         <main>
-            <h1 class="teamHeader">Iron Lions</h1> 
+        <nav>
+        <label class = "logo">LHS ROBOTICS</label>
+        </nav>
+            <h1>This is a LHS website</h1> 
+            <p>hello this is a website</p>
         </main>
         
         <div id="footer"></div>
