--- a/header.html
+++ b/header.html
@@ -1,9 +1,9 @@
 <header>
     <nav>
-        <a href="about.html">About</a>
-        <a href="resources.html">Resources</a>
-        <a href="contact.html">Contact Us</a>
-        <a href="roster.html">Roster</a>
+        <a href="about.html">About</a> | 
+        <a href="resources.html">Resources</a> | 
+        <a href="contact.html">Contact Us</a> | 
+        <a href="roster.html">Roster</a> | 
         <a href="events.html">Events</a>
     </nav>
 </header>
