--- a/header.html
+++ b/header.html
@@ -1,5 +1,6 @@
 <header>
     <nav>
+        <a href="about.html">About</a> | 
         <a href="resources.html">Resources</a> | 
         <a href="contact.html">Contact Us</a> | 
         <a href="roster.html">Roster</a> | 
