add a home link to get back to home

--- a/header.html
+++ b/header.html
@@ -1,5 +1,6 @@
 <header>
     <nav>
+        <a href="https://iron-lions.github.io/">Home</a> |
         <a href="about.html">About</a> | 
         <a href="resources.html">Resources</a> | 
         <a href="contact.html">Contact Us</a> | 
