--- a/about.html
+++ b/about.html
@@ -3,7 +3,7 @@
     <head>
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <title>Iron Lions</title>
+        <title>About</title>
         <link href="/css/style.css" rel="stylesheet" type="text/css" media="all">
         <link rel="icon" type="image/x-icon" href="/img/favicon/programming.png">
         <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
@@ -19,6 +19,10 @@
 
    <body>
         <div id="header"></div>
+
+        <main>
+            <h1 class="teamHeader">About</h1> 
+        </main>
         
         <div id="footer"></div>
     </body>
