--- a/contact.html
+++ b/contact.html
@@ -3,7 +3,7 @@
     <head>
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <title>Resources</title>
+        <title>Contact US</title>
         <link href="/css/style.css" rel="stylesheet" type="text/css" media="all">
         <link rel="icon" type="image/x-icon" href="/img/favicon/programming.png">
         <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
@@ -21,7 +21,7 @@
         <div id="header"></div>
 
         <main>
-            <h1 class="teamHeader">Resources</h1> 
+            <h1 class="teamHeader">Contact Us</h1> 
         </main>
         
         <div id="footer"></div>
