add headers to roster page

--- a/roster.html
+++ b/roster.html
@@ -22,6 +22,14 @@
 
         <main>
             <h1 class="teamHeader">Roster</h1> 
+              <h2>Department of Building</h2>
+                <h3>Director: Abhi Patel</h3>
+              <h2>Department of Programming and Electronics</h2>
+                <h3>Director: Yiru Liu</h3>
+              <h2>Department of Strategy and Design</h2>
+                <h3>Director: Holden Lambert</h3>
+              <h2>Department of Outreach and Operations</h2>
+                <h3>Director: Avery Brown</h3>
         </main>
         
         <div id="footer"></div>
