--- a/events.html
+++ b/events.html
@@ -3,7 +3,7 @@
     <head>
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <title>About</title>
+        <title>Iron Lions</title>
         <link href="/css/style.css" rel="stylesheet" type="text/css" media="all">
         <link rel="icon" type="image/x-icon" href="/img/favicon/programming.png">
         <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
@@ -19,10 +19,6 @@
 
    <body>
         <div id="header"></div>
-
-        <main>
-            <h1 class="teamHeader">Events</h1> 
-        </main>
         
         <div id="footer"></div>
     </body>
