attempt add image

--- a/resources.html
+++ b/resources.html
@@ -25,5 +25,7 @@
         </main>
         
         <div id="footer"></div>
+        <img src="/img/favicon/programming.png" alt="Image of handbook cover page." width="500" height="500"/>
+        <h1>This is a test image</h1>
     </body>
 </html>
