--- a/about.html
+++ b/about.html
@@ -21,7 +21,7 @@
         <div id="header"></div>
 
         <main>
-            <h1 class="teamHeader">About</h1> 
+            <h1 class="aboutHeader">About</h1> 
         </main>
         
         <div id="footer"></div>
