--- a/header.html
+++ b/header.html
@@ -1,6 +1,6 @@
 <header>
     <nav>
-        <div style="display:block;text-align:left"><a href="programming.png" imageanchor="1"><img align="left" src="programming.png" border="0"></a>  
+        <div style="display:block;text-align:left"><a href="programming.png" imageanchor="1"><img align="center" src="programming.png" border="0"></a>  
         <div style="display:block;text-align:left">
 <h2><span style="color:rgb(7,55,99)">
         <a href="https://iron-lions.github.io/">Home</a> |
