--- a/header.html
+++ b/header.html
@@ -1,20 +1,20 @@
 <header>
     <nav>
-        <div style="display:block;text-align:left"><a href="programming.png" imageanchor="1"><img align="center" src="programming.png" border="0"></a>  
-        <div style="display:block;text-align:left">
-<h2><span style="color:rgb(7,55,99)">
-        <a href="https://iron-lions.github.io/">Home</a> |
-        <a href="about.html">About</a> | 
-        <a href="resources.html">Resources</a> | 
-        <a href="contact.html">Contact Us</a> | 
-        <a href="roster.html">Roster</a> | 
-        <a href="events.html">Events</a></span></h2>
-<hr>
-<br>
-            
-        </div>
-    </nav>
-</header>
+<!--<        <div style="display:block;text-align:left"><a href="programming.png" imageanchor="1"><img align="center" src="programming.png" border="0"></a> --> 
+<!--<        <div style="display:block;text-align:left">-->
+<!--<<h2><span style="color:rgb(7,55,99)">-->
+<!--<        <a href="https://iron-lions.github.io/">Home</a> |-->
+<!--<        <a href="about.html">About</a> | -->
+<!--<        <a href="resources.html">Resources</a> | -->
+<!--<        <a href="contact.html">Contact Us</a> | -->
+<!--<        <a href="roster.html">Roster</a> | -->
+<!--<        <a href="events.html">Events</a></span></h2>-->
+<!--<<hr>-->
+<!--<<br>-->
+<!--<            -->
+<!--<        </div>-->
+<!--<    </nav>-->
+<!--<</header>-->
             
 <!--<div style="display:block;text-align:left"><a href="programming.png" imageanchor="1"><img align="left" src="programming.png" border="0"></a>  -->
 <!--        <a href="https://iron-lions.github.io/"> Home</a> | -->
@@ -28,11 +28,12 @@
 <!--    </nav> -->
 <!-- </header> -->
 
-<!--    <a href="https://iron-lions.github.io/">Home</a> | -->
-<!--        <a href="about.html">About</a> | -->
-<!--        <a href="resources.html">Resources</a> | -->
-<!--        <a href="contact.html">Contact Us</a> | -->
-<!--        <a href="roster.html">Roster</a> | -->
-<!--        <a href="events.html">Events</a> -->
-<!--    </nav> -->
-<!-- </header> -->
+    <a href="https://iron-lions.github.io/">Home</a> | 
+        <a href="about.html">About</a> | 
+        <a href="resources.html">Resources</a> | 
+        <a href="contact.html">Contact Us</a> | 
+        <a href="roster.html">Roster</a> | 
+        <a href="events.html">Events</a> 
+        </div>
+    </nav> 
+ </header> 
