--- a/resources.html
+++ b/resources.html
@@ -21,7 +21,7 @@
         <div id="header"></div>
 
         <main>
-            <h1 class="teamHeader">Resources</h1> 
+            <h1 class="aboutHeader">Resources</h1> 
         </main>
         
         <div id="footer"></div>
