Attempt Add image

--- a/resources.html
+++ b/resources.html
@@ -25,7 +25,5 @@
         </main>
         
         <div id="footer"></div>
-        <img src="/img/favicon/programming.png" alt="Image of handbook cover page." width="500" height="500"/>
-        <h1>This is a test image</h1>
-    </body>
+        <div id="resourceimg"><img src="/img/favicon/programming.png" width="500" height="500" alt="Handbook cover page" /></div>
 </html>
