Shift image to right

--- a/resources.html
+++ b/resources.html
@@ -1,3 +1,4 @@
+
 <!DOCTYPE html>
 <html lang="en">
     <head>
@@ -21,11 +22,9 @@
         <div id="header"></div>
 
         <main>
-            <h1 class="aboutHeader">Resources</h1> 
+            <h1 class="teamHeader">Resources</h1> 
         </main>
         
         <div id="footer"></div>
-        <img src="/img/favicon/programming.png" alt="Image of handbook cover page." width="500" height="500"/>
-        <h1>This is a test image</h1>
-    </body>
+        <img src="/img/favicon/programming.png" width="500" height="500" alt="Handbook cover page" style = "float: right"/>
 </html>
