Update branch to main with changes
shift image to right

--- a/resources.html
+++ b/resources.html
@@ -26,5 +26,5 @@
         </main>
         
         <div id="footer"></div>
-        <div id="resourceimg"><img src="/img/favicon/programming.png" width="500" height="500" alt="Handbook cover page" /></div>
+        <img src="/img/favicon/programming.png" width="500" height="500" alt="Handbook cover page" style = "float: right"/>
 </html>
