--- a/roster.html
+++ b/roster.html
@@ -20,16 +20,20 @@
    <body>
         <div id="header"></div>
 
-        <main>
+        <main style="color:#a4c2f4">
             <h1 class="teamHeader">Roster</h1> 
               <h2>Department of Building</h2>
                 <h3>Director: Abhi Patel</h3>
+                  <h4>Department Members: Sadie Hurley, Nathan Kanter, Mahadev Nair, Jason Robin, Ezra White</h4>
               <h2>Department of Programming and Electronics</h2>
                 <h3>Director: Yiru Liu</h3>
+                  <h4>Department Members: Boston Paquette, Mohammed Umar, Alden Wohlgemuth, Jacob Zhang</h4>
               <h2>Department of Strategy and Design</h2>
                 <h3>Director: Holden Lambert</h3>
+                  <h4>Department Members: Luca Zdravkovic</h4>
               <h2>Department of Outreach and Operations</h2>
                 <h3>Director: Avery Brown</h3>
+                  <h4></h4>
         </main>
         
         <div id="footer"></div>
