--- a/roster.html
+++ b/roster.html
@@ -23,16 +23,16 @@
         <main style="color:#a4c2f4">
             <h1 class="teamHeader">Roster</h1> 
               <h2>Department of Building</h2>
-                <h3>Director: Abhi Patel</h3>
-                  <h4>Department Members: Sadie Hurley, Nathan Kanter, Mahadev Nair, Jason Robin, Ezra White</h4>
+                <h3>Director: Abhi Patel (he/him)</h3>
+                  <h4>Department Members: Sadie Hurley (she/her), Nathan Kanter (he/him), Mahadev Nair (he/him), Jason Robin (he/him), Ezra White (he/him)</h4>
               <h2>Department of Programming and Electronics</h2>
-                <h3>Director: Yiru Liu</h3>
-                  <h4>Department Members: Boston Paquette, Mohammed Umar, Alden Wohlgemuth, Jacob Zhang</h4>
+                <h3>Director: Yiru Liu (he/him)</h3>
+                  <h4>Department Members: Boston Paquette (he/him), Mohammed Umar (he/him), Alden Wohlgemuth (he/him), Jacob Zhang (he/him)</h4>
               <h2>Department of Strategy and Design</h2>
-                <h3>Director: Holden Lambert</h3>
-                  <h4>Department Members: Luca Zdravkovic</h4>
+                <h3>Director: Holden Lambert (he/him)</h3>
+                  <h4>Department Members: Luca Zdravkovic (he/him)</h4>
               <h2>Department of Outreach and Operations</h2>
-                <h3>Director: Avery Brown</h3>
+                <h3>Director: Avery Brown (they/them)</h3>
                   <h4></h4>
         </main>
         
