Adding first text par

--- a/about.html
+++ b/about.html
@@ -18,11 +18,15 @@
     </head>
 
    <body>
+    <ta>
         <div id="header"></div>
 
         <main>
-            <h1 class="aboutHeader">About</h1> 
+            <h2 class=aboutheaders>About FIRST</h2> 
         </main>
+        <div>
+            <h3 class=aboutboxes>FIRST is the company that runs the First Tech Challenge, as well as other robotics competitions for students K-12. They foster youth’s growth as engineers and promote ‘gracious professionalism’.</h3>
+        </div>
         
         <div id="footer"></div>
     </body>
