Add text, hyperlink, first logo
I need someone to do the text for the description.

--- a/resources.html
+++ b/resources.html
@@ -24,7 +24,18 @@
         <main>
             <h1 class="teamHeader">Resources</h1> 
         </main>
+        <div> 
+            <section class="rsection1"> 
+            <img  class="resourceimg" src="/img/resources/teamhandbookcoverpage.png" alt="Handbook cover page"/>
+            <p class="color-test"> Team Handbook Covers team rules, expectations, and other necessary information</p>
+        </div>
+            </section>
         
+        <div> 
+            <a href="https://www.firstinspires.org" class="firstwebhyper">FIRST'S WEBSITE</a>
+            <img class="firstlogo" src="/img/resources/firstlogo.png" alt="FIRST'S Logo"/>
+        </div>
+
+
         <div id="footer"></div>
-        <img src="/img/favicon/programming.png" width="500" height="500" alt="Handbook cover page" style = "float: right"/>
 </html>
