--- a/about.html
+++ b/about.html
@@ -18,16 +18,15 @@
     </head>
 
    <body>
-    <ta>
         <div id="header"></div>
 
-        <main>
-            <h2 class=aboutheaders>About FIRST</h2> 
-        </main>
-        <div>
-            <h3 class=aboutboxes>FIRST is the company that runs the First Tech Challenge, as well as other robotics competitions for students K-12. They foster youth’s growth as engineers and promote ‘gracious professionalism’.</h3>
-        </div>
+        <h2 class=aboutheaders>About FIRST</h2> 
+        <h3 class=aboutboxes>FIRST is the company that runs the First Tech Challenge, as well as other robotics competitions for students K-12. They foster youth’s growth as engineers and promote ‘gracious professionalism’.</h3>
+        <h2 class=aboutheaders>About Us</h2>
+        <h3 class=aboutboxes>Lincoln High School’s robotics team/club. We compete in First Robotics’ annual First Tech Challenge. Our mascot is The Iron Lion himself: Ferrum Leo :3.</h3>
+        <h2 class=aboutheaders>About the Departments</h2>
+        <h3 class=aboutboxes>Missing</h3>
         
-        <div id="footer"></div>
+            <div id="footer"></div>
     </body>
 </html>
