--- a/resources.html
+++ b/resources.html
@@ -26,14 +26,14 @@
         </main>
         <div> 
             <section class="rsection1"> 
-            <img  class="resourceimg" src="/img/resources/teamhandbookcoverpage.png" alt="Handbook cover page"/>
+            <img  class="resourceimg" src="/img/resources/teamhandbookcoverpage.png"/>
             <p class="color-test"> Team Handbook Covers team rules, expectations, and other necessary information</p>
         </div>
             </section>
         
         <div> 
             <a href="https://www.firstinspires.org" class="firstwebhyper">FIRST'S WEBSITE</a>
-            <img class="firstlogo" src="/img/resources/firstlogo.png" alt="FIRST'S Logo"/>
+            <img class="firstlogo" src="/img/resources/firstlogo.png"/>
         </div>
 
 
