Add hyperlink & image works (final)

--- a/resources.html
+++ b/resources.html
@@ -27,12 +27,12 @@
         <div> 
             <section class="rsection1"> 
             <img  class="resourceimg" src="/img/resources/teamhandbookcoverpage.png"/>
-            <p class="color-test"> Team Handbook Covers team rules, expectations, and other necessary information</p>
+            <p class="color-test"> Team Handbook Covers team rules, expectations, and other necessary information <a href="https://docs.google.com/document/d/1vFZqOWf-WRh72pG0NEwBSNWkxDI7ofDlONyB61UmXb0/edit#heading=h.rjzk6afz7yt1" target="_blank" alt="Handbook Coverpage"> Team HandBook <b> ></b></a></p>
         </div>
             </section>
         
         <div> 
-            <a href="https://www.firstinspires.org" class="firstwebhyper">FIRST'S WEBSITE</a>
+            <a href="https://www.firstinspires.org" class="firstwebhyper" target="_blank" alt="FIRST'S Logo">FIRST'S WEBSITE<b> ></b></a>
             <img class="firstlogo" src="/img/resources/firstlogo.png"/>
         </div>
 
