--- a/roster.html
+++ b/roster.html
@@ -22,7 +22,8 @@
 
         <main style="color:#a4c2f4">
           
-            <h1 class="teamHeader">Roster</h1> 
+            <h1 class="teamHeader">Roster</h1>
+            <img class="building_image" src="/img/favicon/building.png">
             <h2>Department of Building</h2>
             <h3>Director: Abhi Patel (He/Him) 2024</h3>
             <h4>Department Members:</h4>
@@ -60,6 +61,7 @@
                 <td style="text-align: center">2025</td>
               </tr>
             </table>
+            <img class="programming_image" src="/img/favicon/programming.png">
             <h2>Department of Programming and Electronics</h2>
             <h3>Director: Yiru Liu (He/Him) 2023</h3>
             <h4>Department Members:</h4>
@@ -93,6 +95,7 @@
               </tr>
   
             </table>
+            <img class="strategy_image" src="/img/favicon/strategy_design.png">
             <h2>Department of Strategy and Design</h2>
             <h3>Director: Holden Lambert (He/Him) 2026</h3>
             <h4>Department Members:</h4>
@@ -111,6 +114,7 @@
               </tr>
   
             </table>
+            <img class="outreach_image" src="/img/favicon/outreach_operations.png">
             <h2>Department of Outreach and Operations</h2>
             <h3>Director: Avery Brown (They/Them) 2023</h3>
               
