--- a/roster.html
+++ b/roster.html
@@ -6,6 +6,7 @@
         <title>Roster</title>
         <link href="/css/style.css" rel="stylesheet" type="text/css" media="all">
         <link rel="icon" type="image/x-icon" href="/img/favicon/programming.png">
+        <script type="text/javascript" src="/js/random_favicon.js"></script>
         <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
         <script> 
             $(function(){
