link class from css

--- a/resources.html
+++ b/resources.html
@@ -28,7 +28,7 @@
         <div> 
             <section class="rsection1"> 
             <img  class="resourceimg" src="/img/resources/teamhandbookcoverpage.png"/>
-            <p class="color-test"> Team Handbook Covers team rules, expectations, and other necessary information <a href="https://docs.google.com/document/d/1vFZqOWf-WRh72pG0NEwBSNWkxDI7ofDlONyB61UmXb0/edit#heading=h.rjzk6afz7yt1" target="_blank" alt="Handbook Coverpage"><br><b> Team HandBook ></b></br></a></p>
+            <p class="color-test"> Team Handbook Covers team rules, expectations, and other necessary information <a class="handbook" href="https://docs.google.com/document/d/1vFZqOWf-WRh72pG0NEwBSNWkxDI7ofDlONyB61UmXb0/edit#heading=h.rjzk6afz7yt1" target="_blank" alt="Handbook Coverpage"><br><b> Team HandBook ></b></br></a></p>
         </div>
             </section>
         
