--- a/contact.html
+++ b/contact.html
@@ -22,7 +22,8 @@
         <div id="header"></div>
 
         <main>
-            <h1 class="teamHeader">Contact Us</h1> 
+            <h1 class="teamHeader">Contact Us</h1>
+            <a href="tel:123-456-7890">CLICK TO CALL</a>
         </main>
         
         <div id="footer"></div>
