fixing the telephone number line
It did not work the first time.

--- a/contact.html
+++ b/contact.html
@@ -23,7 +23,8 @@
 
         <main>
             <h1 class="teamHeader">Contact Us</h1>
-            <a href="tel:123-456-7890">CLICK TO CALL</a>
+            <h3 class="aboutboxes" a href="tel:123-456-7890"> CLICK TO CALL </h3>
+            <!--<a href="tel:123-456-7890">CLICK TO CALL</a>-->
         </main>
         
         <div id="footer"></div>
