adding the link to email
removed comment about telephone number

--- a/contact.html
+++ b/contact.html
@@ -24,7 +24,7 @@
         <main>
             <h1 class="teamHeader">Contact Us</h1>
             <h3 class="aboutboxes" a href="tel:123-456-7890"> CLICK TO CALL </h3>
-            <!--<a href="tel:123-456-7890">CLICK TO CALL</a>-->
+            <h3 class="aboutboxes" a href="mailto:webdesign@example.com"> Send me an email </h3>
         </main>
         
         <div id="footer"></div>
