--- a/contact.html
+++ b/contact.html
@@ -23,8 +23,8 @@
 
         <main>
             <h1 class="teamHeader">Contact Us</h1>
-            <h3 class="aboutboxes" a href="tel:123-456-7890"> CLICK TO CALL </h3>
-            <h3 class="aboutboxes" a href="mailto:webdesign@example.com"> Send me an email </h3>
+            <a href="tel:123-456-7890"> CLICK TO CALL </a>
+            <a class="aboutboxes" a href="mailto:webdesign@example.com"> Send me an email </a>
         </main>
         
         <div id="footer"></div>
