fixed the links

--- a/contact.html
+++ b/contact.html
@@ -24,7 +24,8 @@
         <main>
             <h1 class="teamHeader">Contact Us</h1>
             <a href="tel:123-456-7890"> CLICK TO CALL </a>
-            <a class="aboutboxes" a href="mailto:webdesign@example.com"> Send me an email </a>
+            <h1> </h1>
+            <a href="mailto:webdesign@example.com"> Send me an email </a>
         </main>
         
         <div id="footer"></div>
