--- a/contact.html
+++ b/contact.html
@@ -25,7 +25,7 @@
             <h1 class="teamHeader">Contact Us</h1>
             <a href="tel:123-456-7890"> CLICK TO CALL </a>
             <h1> </h1>
-            <a href="mailto:webdesign@example.com"> Send me an email </a>
+            <a href="mailto:IronLions@proton.me"> Send me an email </a>
         </main>
         
         <div id="footer"></div>
