fixed the social media link
I added a link to it, now when you press it it brings you the Iron Lions instagram page.

--- a/events.html
+++ b/events.html
@@ -27,7 +27,7 @@
            <h3 class="aboutboxes">List Past Events - How the team did, and what we learned from the events</h3>
            <h2 class="aboutboxes">List Upcoming events- Where they are, when they are, if they require admission, and what will be expected during the event
            </h2>
-           <h6 class="aboutboxes">Social Media Links + <a href="tel:123-456-7890"> Team Contact Number </a>
+          <h6 class="aboutboxes"> <a href="https://instagram.com/iron_lions_20763"> Social Media Link </a> + <a href="tel:123-456-7890"> Team Contact Number </a>
            </h6>
        </main>
       
