--- a/contact.html
+++ b/contact.html
@@ -25,7 +25,7 @@
             <h1 class="teamHeader">Contact Us</h1>
             <h6 class="aboutboxes"> <a href="tel:123-456-7890"> CLICK TO CALL TEAM </a> </h6>
             <h1> </h1>
-            <h6 class="aboutboxes"> <a href=mailto:"IronLions@proton.me"> Send us an email if you have any questions </a> </h6>
+            <h6 class="aboutboxes"> <a href="mailto:IronLions@proton.me">CLICK TO EMAIL THE TEAM</a> </h6>
         </main>
         
         <div id="footer"></div>
