--- a/events.html
+++ b/events.html
@@ -22,8 +22,36 @@
  
        <main>
            <h1 class="teamHeader">Events</h1>
- 
-           <h2 class="imgheaders">Scrolling images/photos of past events</h2>
+
+           <!-- Image slider starts here-->
+           <script src="./js/image_slider.js"></script>
+           <div class="slider">
+            <div class="slides">
+              <div class="slide">
+                <img src="./img/favicon/building.png" alt="Image 1">
+              </div>
+              <div class="slide">
+                <img src="./img/favicon/outreach_operations.png" alt="Image 2">
+              </div>
+              <div class="slide">
+                <img src="/img/favicon/programming.png" alt="Image 3">
+              </div>
+              <div class="slide">
+                <img src="/img/favicon/strategy_design.png" alt="Image 4">
+              </div>
+            </div>
+            <div class="dots">
+              <span class="dot" onclick="currentSlide(1)"></span>
+              <span class="dot" onclick="currentSlide(2)"></span>
+              <span class="dot" onclick="currentSlide(3)"></span>
+              <span class="dot" onclick="currentSlide(4)"></span>
+            </div>
+          </div>
+          
+          <a class="prev" onclick="plusSlides(-1)">&#10094;</a>
+          <a class="next" onclick="plusSlides(1)">&#10095;</a>
+          
+            <!-- Image slider ends here-->
            <h3 class="aboutboxes">List Past Events - How the team did, and what we learned from the events</h3>
            <h2 class="aboutboxes">List Upcoming events- Where they are, when they are, if they require admission, and what will be expected during the event
            </h2>
