making the images go up.

--- a/events.html
+++ b/events.html
@@ -24,6 +24,9 @@
            <h1 class="teamHeader">Events</h1>
 
            <!-- Image slider starts here-->
+          <marquee behavior="scroll" direction="up">
+          <img src="./img/favicon/building.png" alt="Image 5></marquee>
+          
            <script src="./js/image_slider.js"></script>
            <div class="slider">
             <div class="slides">
