--- a/events.html
+++ b/events.html
@@ -23,10 +23,7 @@
        <main>
            <h1 class="teamHeader">Events</h1>
 
-           <!-- Image slider starts here-->
-          <marquee behavior="scroll" direction="up">
-          <img src="./img/favicon/building.png" alt="Image 5></marquee>
-          
+           <!-- Image slideshow starts here-->
            <script src="./js/image_slider.js"></script>
            <div class="slider">
             <div class="slides">
@@ -54,7 +51,7 @@
           <a class="prev" onclick="plusSlides(-1)">&#10094;</a>
           <a class="next" onclick="plusSlides(1)">&#10095;</a>
           
-            <!-- Image slider ends here-->
+            <!-- Image slideshow ends here-->
            <h3 class="aboutboxes">List Past Events - How the team did, and what we learned from the events</h3>
            <h2 class="aboutboxes">List Upcoming events- Where they are, when they are, if they require admission, and what will be expected during the event
            </h2>
