Made filename more consise

--- a/events.html
+++ b/events.html
@@ -24,7 +24,7 @@
            <h1 class="teamHeader">Events</h1>
 
            <!-- Image slideshow starts here-->
-           <script src="./js/image_slider.js"></script>
+           <script src="./js/image_slideshow.js"></script>
            <div class="slider">
             <div class="slides">
               <div class="slide">
