--- a/index.html
+++ b/index.html
@@ -24,6 +24,9 @@
 
     <main>
         <h1>Iron Lions</h1>
+        <div class="box">
+            <p>About Us Text</p>
+          </div>
     </main>
 
     <div id="footer"></div>
