--- a/index.html
+++ b/index.html
@@ -25,8 +25,8 @@
     <main>
         <h1>Iron Lions</h1>
         <div class="box">
-            <p>About Us Text</p>
-          </div>
+            <p>About us text</p>
+        </div>
     </main>
 
     <div id="footer"></div>
