Fix text bug mistake

--- a/events.html
+++ b/events.html
@@ -40,7 +40,7 @@
                 <img src="/img/favicon/strategy_design.png" alt="Image 4">
               </div>
             </div>
-          
+          </div>
           <a class="prev" onclick="plusSlides(-1)">&#10094;</a>
           <a class="next" onclick="plusSlides(1)">&#10095;</a>
           
