--- a/events.html
+++ b/events.html
@@ -41,8 +41,8 @@
               </div>
             </div>
           </div>
-          <a class="prev" onclick="plusSlides(-1)">&#10094;</a>
-          <a class="next" onclick="plusSlides(1)">&#10095;</a>
+          <a class="prev" onclick="plusSlides(-1)"></a>
+          <a class="next" onclick="plusSlides(1)"></a>
           
             <!-- Image slideshow ends here-->
            <h3 class="aboutboxes">List Past Events - How the team did, and what we learned from the events</h3>
